--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
